# micrograd

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml  trace_graph.ipynb
examples/: maximum.py  mnist.py  moon.py  toy_classification.py  train.py
examples/attention/: maximum_classification.py  maximum_regression.py  utils.py
micrograd/: loss.py  nn.py  operations.py  optim.py  optimization.py  tensor.py
tests/: test_gradients.py  test_loss.py  test_micrograd.py  test_nn.py  test_operations.py  test_tensor.py  utils.py
visualisation/: core.py  main.py
