[project]
name = "micrograd"
version = "0.1.0"
description = "A tiny autograd engine forked from Karpathy's micrograd with pedagogic extensions."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "croques", email = "croques@wiremind.io" }]
dependencies = [
    "numpy>=2.5.1",
    "tqdm>=4.68.4",
]

[project.urls]
Homepage = "https://github.com/crqs/micrograd"
Repository = "https://github.com/crqs/micrograd"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "torch>=2.13.0",  # required to run comparison tests with pytorch
]
examples = [
    "marimo>=0.23.14",
    "scikit-learn>=1.9.0",
]
example = [
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.13"
include = ["micrograd"]
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes-q
    "RET", # flake8-return
    "RUF", # ruff specific rules
    "S",   # flake8-bandit-s
    "TID", # tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = false
forced-separate = ["tests"]
